--- a/style.css
+++ b/style.css
@@ -9,15 +9,20 @@ body {
 }
 
 .header {
-    color: white;
+    font-size: 18px;
     height: 535px;
     display: flex;
     flex-direction: column;
     flex: 1;
 }
 
+.rounded-text {
+    color: grey;
+}
+
 .information {
-    height: 500px;
+    height: 450px;
+    color: #1F2937;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,12 +33,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+}
+
+.information-top {
+    font-size: 36px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .quote {
     height: 430px;
     background-color: #E5E7EB;
+    color: #1F2937;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -51,6 +64,7 @@ body {
 }
 
 .action {
+    color: #F9FAF8;
     height: 100px;
     width: 800px;
     background-color: #3882F6;
@@ -64,11 +78,12 @@ body {
 }
 
 .footer {
-    color: white;
+    color: #E5E7EB;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 18px;
 }
 
 ul {
@@ -101,6 +116,7 @@ a {
 }
 
 .links {
+    color: grey;
     display: flex;
     justify-content: right;
     align-items: center;
@@ -109,7 +125,10 @@ a {
 }
 
 .header-logo {
+    color:#F9FAF8;
     padding: 10px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .awesome-text, .placeholder {
@@ -123,20 +142,31 @@ a {
 }
 
 button {
-    width: 100px;
+    width: 150px;
+    background-color: #3882F6;
+    font-size: 18px;
+    border-radius: 10px 10px 10px 10px;
+    border: none;
+    color: white;
+    padding: 10px;
+}
+
+.action-button {
+    border: 3px solid white;
 }
 
 .placeholder {
     background-color: grey;
+    color: #F9FAF8;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .rounded {
-    border: 5px solid #3882F6;
-    height: 100px;
-    width: 100px;
+    border: 4px solid #3882F6;
+    height: 120px;
+    width: 120px;
     border-radius: 10px 10px 10px 10px;
     margin: 10px;
 }
@@ -146,9 +176,9 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100px;
     text-align: center;
-    margin: 50px;
+    margin: 25px;
+    width: 120px;
 }
 
 .inspire, .thor {
@@ -157,9 +187,33 @@ button {
 
 .inspire {
     font-size: 36px;
+    font-style: italic;
 }
 
 .thor {
     display: flex;
     justify-content: right;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.this-website {
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+}
+
+.call {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.product {
+    color: #E5E7EB;
+}
+
+.subtext {
+    color: grey;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
